# ulgen-ai

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  requirements.txt
backend/: .env.example  .env.vercel.example  package-lock.json  package.json  test_casper.ts  tsconfig.json
backend/scripts/: generateKeys.js
backend/src/: casper.ts  server.ts
backend/src/llm/: router.ts
backend/src/tools/: csprTradeMCP.ts  x402Payment.ts
backend/tests/: server.test.ts
contracts/: Cargo.toml  Makefile
contracts/src/: lib.rs  marketplace.rs  registry.rs
contracts/wasm/: InvestigationRegistry.wasm  Marketplace.wasm
docs/: DEPLOYMENT.md  MONETIZATION.md  architecture.md  configuration.md  demo_walkthrough.md  llm_integration_guide.md  smart_contracts.md  testnet_deployment_guide.md  usage_guide.md  vercel_deployment_guide.md
frontend/: .env.vercel.example  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: Home.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/providers/: CsprClickProvider.tsx
frontend/src/types/: csprclick.d.ts
