[package]
name = "sentinel-contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_contracts"
path = "src/lib.rs"

[dependencies]
odra = { version = "2.8.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-livenet-env = { version = "2.8.0" }

[features]
default = []


[[bin]]
name = "deploy"
path = "bin/deploy.rs"
